static/css/niu2.css
/*
 * built with boostrap3 
 * @navbar-height: 30px
 * @nav-link-padding: 7px
 */

/* overwrite bootstrap3 css rules */
pre {
    word-break: normal;
    word-wrap: normal;
}

code {
    white-space: pre-line;
    word-wrap: break-word;
}

i {
    margin-right: 4px;
}

h2:first-child {
    margin-top: 0;
}

h1 {
	padding-top: 45px;
    margin-bottom: 20px;
}

h1 i {
    margin-right: 7px;
}

h3 {
    margin-bottom: 11px;
}

blockquote p {
    font-size: 14.5px !important;
    line-height: 1.3 !important;
}

/* niu-x2-sidebar css rules */
.image-cover-box {
    position: relative;
}

.image-cover {
    position: absolute;
    left: 0;
    text-align: center;
    color: white;
    font-size: 25px;
    font-weight: bold;
}

.image-cover i {
    margin-left: 7px;
}

.footnote li p {
    margin-bottom: 0;
    display: inline-block;
}

#niu2-toolbar {
    position: fixed;
    top: 30%;
    left: -36px;
}

#niu2-toolbar-viewsource {
    padding-left: 2px;
}

#niu2-toolbar a {
    color: #666666;
}

#niu2-toolbar a:hover {
    color: #428bca;
    text-decoration: none;
}

#content-comments {
    margin-top: 25px;
    padding-top: 20px;
}

sup {
    margin: 0 3px 0 2px;
}

sup a.footnote-ref:before {
    content: "[";
    margin-right: 1px;
}

sup a.footnote-ref:after {
    content: "]";
    margin-left: 1px;
}

sup a.footnote-ref:hover {
    text-decoration: none;
}

div.footnote hr {
    margin-bottom: 10px;
}

/*
div.footnote ol {
    padding-left: 22px;
}
*/

div.footnote li {
    margin-top: 2px;
}

div.footnote span {
    line-height: 1.2;
}

div.footnote p {
    display: inline;
}

.activeSubBackref {
    text-decoration: underline;
}

a.activeSubBackref:hover {
    text-decoration: underline !important;
}

.backref-span {
    vertical-align: super;
}

a.footnote-backref:hover {
    text-decoration: none;
}

div.popover {
    line-height: 1.6;
    max-width: 320px;
    background-color: white;
    color: black;
}

.alert-info a {
    font-weight: bold;
}

/* fix navbar blik issue on chrome windows */
.navbar {
    -webkit-backface-visibility: hidden;
}

/*
#niu2-main-content {
    font-size: 15px;
}
*/

#niu2-main-content ul ul, 
#niu2-main-content ol ul,
#niu2-main-content ul ol,
#niu2-main-content ol ol {
    margin-bottom: 5px;
}

.navbar ul, .navbar ol {
    line-height: 1.42 !important;
}

p, #niu2-main-content ul, #niu2-main-content ol {
    line-height: 1.7;
}

.footnote ul, .footnote ol, .footnote p {
    line-height: 1.6 !important;
}

hr {
    border-top: 1px solid #ccc;
}

img {
    max-width: 100%;
    /*
    display: block;
    margin-left: auto;
    margin-right: auto;
    */
}

.with-right-border {
    border-right: 1px solid #ccc;
}

#niu2-right-container {
    margin-left: 5px;
}

a.niu2-active-toc, a.niu2-active-toc:hover {
    color: white;
    background-color: #428bca;
    display: inline-block;
    text-decoration: none;
}

/*
a.niu2-active-toc:before {
    font-family: FontAwesome;
    content: "\f105";
    margin-left: -10px;
    margin-right: 5px; 
    color: black;
    display: inline-block;
}
*/

.niu2-sidebar-tag {
    margin-top: 3px;
}

.niu2-sidebar-label:first-child {
    margin-top: 0 !important;
}

.niu2-sidebar-label {
    margin-top: 10px;
    margin-bottom: 4px;
    font-size: 15px;
}

.niu2-sidebar-inter-value {
    margin-left: 20px;
}

.niu2-sidebar-value {
    margin-left: 20px;
}

.niu2-sidebar-value ul {
    padding-left: 0;
    list-style: none;
}

#niu2-sidebar-toc-ctrl:hover {
    cursor: pointer;
}

.niu2-sidebar-toc-index {
    float: left;
    text-align: right;    
    width: 35px;
}

#niu2-sidebar-toc {
    margin-top: 10px !important;
}

#niu2-sidebar-toc-list {
    padding-left: 0;
    margin-left: -4px;
    overflow-x: hidden;
    overflow-y: auto;
    line-height: 1.6;
}

#niu2-sidebar-toc-list li ol {
    margin-left: -3px;
}

#niu2-sidebar-toc-list li ol li ol,
#niu2-sidebar-toc-list li ul li ul {
    margin-left: -2px;
}

#niu2-sidebar-toc-list a {
    padding: 0 3px;
    margin-left: 3px;
    display: inline-block;
    max-width: 70%;
    text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
    overflow: hidden;
    vertical-align: top;
    white-space: nowrap;
}

#niu2-sidebar-toc-list li li a {
    max-width: 78%;
}

#niu2-sidebar-toc-list li li li a {
    max-width: 68%;
    margin-left: 6px;
}

#niu2-sidebar-toc-list li ol {
    display: none;
}

#niu2-sidebar-toc-list ol li {
    display: none;
    position: relative;
    left: 1em;
    list-style-position: outside;
}

#niu2-sidebar-toc-list li {
    margin-left: -20px;
    margin-top: 4px;
    list-style: none;
}

#niu2-sidebar-toc-list>li {
    margin-left: -15px;
}

.niu2-sidebar-toc-fixed {
    width: inherit;
    position: fixed;
    top: 50px !important;
}

/*
img {
    display: block;
    padding: 4px;
    line-height: 20px;
    border: 1px solid #ddd;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
}
*/

.niu2-top-icon-hidden {
    display: none;
}

.niu2-top-icon:hover {
    display: inline;
}

.niu2-404-info-bigger {
    margin-top: 30px;
    font-size: 100px;
    text-align: center;
}

.niu2-404-info {
    font-size: 50px;
    text-align: center;
}

#niu2-cse-wrapper {
    margin-right: 20px;
}

#niu2-cse-header-box {
    position: absolute;
    margin-top: 3.5px;
    margin-left: -172px;
}

#niu2-cse-search-input {
	width: 150px;
    height: 20px;
    padding: 1px 3px;
}

#niu2-cse-ctrl-box {
    color: #999;
    margin-top: 6px;
    cursor: pointer;
}

#niu2-cse-search-image {
    margin: 2px 3px 0 5px;
}

.niu2-clearfix {
    height: 0;
}

/*
.niu2-index-article a:hover {
	text-decoration: none;
    color: white;
    background-color: #428bca;
    display: inline-block;
}
*/

.niu2-meta {
    margin-bottom: 35px;
}

.niu2-meta a, .niu2-meta-index a {
    color: #333;
}

.niu2-meta-tag {
    padding-left: 10px; 
}

.niu2-meta-tag a, .niu2-meta-tag-index a {
    margin-right: 6px;
    display: inline-block;
}

.niu2-meta-category-index, .niu2-meta-tag-index {
    margin-right: 10px;
}

.niu2-meta-index {
    margin: 8px 0;
}

.niu2-meta-date-index {
    font-size: 14px;
    margin-right: 10px;
}

.niu2-index-title {
    margin-bottom: 20px;
}

.niu2-index-date {
    
}

.niu2-index-article {
    margin-bottom: 20px;
}

.niu2-index-article-title {
	font-size: 25px;
}

.niu2-footer {
    clear: both;
}

.niu2-footer hr {
	margin: 8px 0;
}

.niu2-footer p {
	padding: 0;
	margin: 5px 0;
    line-height: 1.42 !important;
}

.tagcloud-list {
    line-height: 1.5;
}

.niu2-button {
	margin-left: 5px;
}

.niu2-icons a {
    text-decoration: none;	
}

.niu2-category-list {
    padding-left: 5px;
}

.niu2-category-list li {
    list-style: none;
}

a.niu2-toggle-ctrl {
    height: 28px;
    font-size: 18px;
    padding-left: 5px;
    cursor: pointer;
    display: block;
    color: #333;
    width: 100%;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    margin-bottom: 3px;
}

a.niu2-toggle-ctrl:hover {
    text-decoration: none;
    color: white;
    background-color: #428bca;
}

#niu2-archives {
    font-size: 15px;
    line-height: 1.7;
}

#niu2-archives ul {
  margin-bottom: 4px; 
  padding-left: 25px;
}

#niu2-archives li {
  list-style: none;
}

#niu2-archives li span {
    margin-right: 10px;
}

#niu2-tagcloud {
	margin-top: 15px;
}

#niu2-tagcloud-filter-input {
	width: 40%;
}

#niu2-tagcloud ul {
    padding: 0;	
}

#niu2-tagcloud a {
    display: inline-block;
    padding: 0 3px;
}

#niu2-tagcloud a:hover {
	text-decoration: none;
	color: white;
	background-color: #428bca;
}

#niu2-tagcloud li {
	display: inline;
}

#niu2-tagcloud li, .dropdown-toc li {
	list-style: none;
}

.dropdown-toc a {
	padding: 3px 0 5px 5px;
	color: #333;
	display: list-item;
}

.dropdown-toc a:hover {
	color: white;
	background-color: #428bca;
	text-decoration: none;
}

.dropdown-toc .dropdown-menu {
	max-height: 500px;
	overflow: auto;
}

.dropdown-toc > ul {
    min-width: 200px;
}

.dropdown-toc > .dropdown-menu ul {
    padding-left: 10px;
}

.dropdown-toc > .dropdown-menu > li > a {
    padding-left: 10px;
}

.niu2-content {
	padding-top: 30px;
}

/* fix headings covered by fixed header problem */
h1:before, h2:before, h3:before,
h4:before, h5:before, h6:before {
	display: block;
    content: "";
    height: 45px;
    margin: -45px 0 0;
}

@media (max-width: 767px) {

.dropdown-toc > .dropdown-menu > li > a {
    padding: 5px 10px 5px 10px !important;
}

.niu2-index-date {
	display: none;
}

#niu2-cse-wrapper {
    margin-right: 20px;
    padding-bottom: 10px;
    width: 140px;
}

#niu2-cse-header-box {
    position: relative;
    margin-top: 2.5px;
    margin-left: -8px;
}

#niu2-cse-search-input {
    width: 150px;
    position: absolute;
    margin-left: -3px;
    margin-top: -12px;
}

#niu2-cse-ctrl-box {
    color: #999;
    position: absolute;
    margin-top: -20px;
    margin-left: 3px;
}

#niu2-cse-search-text {
    display: none;
}

.dropdown-toc a {
    color: #999;
}

}

@media (max-height: 300px) {
/* 2 levels at most */
.dropdown-toc li li li {
    display: none !important;
}

}

